# workload-iam-poc

./: INSTRUCTION.md  README.md  docker-compose.yml  pyproject.toml
app/llm-agent/: Dockerfile  main.py
app/user-service/: Dockerfile  main.py
docs/: deployment.puml  mtls-handshake.puml  usecase-flow.puml
envoy/agent/: envoy.yaml
envoy/server/: envoy.yaml
k8s/: README.md
k8s/workload/llm-agent/: deployment.yaml  envoy.yaml  service.yaml
k8s/workload/user-service/: deployment.yaml  envoy.yaml  opa-config.yaml  opa-policy.rego  service.yaml
llm-agent/: Dockerfile  agent.py
opa/: config.yaml  policy.rego
spire/: .gitignore  register_entries.sh
spire/agent/: agent.conf
spire/server/: server.conf
user-service/: Dockerfile  main.py
