[project]
name = "workload-iam-poc"
version = "0.1.0"
description = "Workload IAM PoC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "python-jose>=3.3.0",
    "pydantic>=2.4.2",
    "httpx>=0.25.1",
    "openai>=1.0.0",
    "fastapi>=0.116.1,<0.117.0",
    "pydantic>=2.11.6,<3.0.0",
]
